changes to design of follow route, added route for following a user, added testers for most functions and units, fixed discover and following routes, included liked field to know if an authenticated user liked a post in the feed routes
