# src/routes/posts.py
@@ -1,5 +1,6 @@
 from flask import Blueprint, jsonify, request
-from ..models.models import Post, User, Likes, Following
+from ..models.models import Post, User, Likes, Follows
+from flask_jwt_extended import (jwt_required, current_user)
 from .. import db
 
 post_bp = Blueprint('posts', __name__)
@@ -27,7 +28,7 @@ def readMany():
 @post_bp.route("/post", methods=['POST'])
 def create():
     req = request.get_json()
-    return jsonify(Post.create(req.get('user_id'), req.get('doodle_id')))
+    return jsonify(Post.create(req.get('user_id'), req.get('doodle_id'))), 201
 
 @post_bp.route("/post/<int:id>", methods=['PUT'])
 def update(id):
@@ -38,44 +39,57 @@ def update(id):
 def delete(id):
     return jsonify(Post.delete(id))
 
-@post_bp.route("/post/like", methods=['PUT'])
-def update_like():
-    req = request.get_json()
-    uid = req.get('uid')
-    pid = req.get('pid')
+@post_bp.route("/post/like", methods=['GET'])
+@jwt_required()
+def post_like():
+    uid = current_user.uid or request.args.get('uid')
+    pid = request.args.get('pid')
     exists = Likes.query.filter_by(liking_user = uid, liked_post = pid).first()
     if exists is None:
         post = Post.query.filter_by(pid = pid).one()
         post.likes += 1
-        return jsonify(Likes.create(uid, pid))
+        return jsonify(Likes.create(uid, pid)), 201
     else:
         post = Post.query.filter_by(pid = pid).one()
         post.likes -= 1
         if post.likes < 0:
             post.likes = 0
-        return jsonify(Likes.delete(exists.like_id))
+        return jsonify(Likes.delete(exists.like_id)), 200
 
 @post_bp.route("/posts/discover", methods=['GET'])
-def discover():
-    uid = request.args.get('uid')
+@jwt_required()
+def post_discover():
+    uid = current_user.uid or request.args.get('uid')
     page = request.args.get('page')
     posts = [
         {
             'uid': i.uid,
             'username': i.username,
             'screenname': i.screenname,
+            'liked': i.liked,
             'pid': i.pid,
             'doodle_id': i.doodle_id,
             'likes': i.likes,
             'createdat': i.createdat
         }
-        for i in Post.query.join(User, Post.user_id == User.uid).add_columns(User.uid, User.screenname, User.username, Post.pid, Post.doodle_id, Post.likes, Post.createdat).order_by(Post.likes.desc()).offset(page or 0).limit(1).all()
-    ]
+        for i in db.session.execute("""select users.uid, users.username, users.screenname, post.pid, post.doodle_id, post.likes, likes.like_id IS NOT NULL as liked, post.createdat
+            from post
+            left join likes on post.pid = likes.liked_post and likes.liking_user = :uid
+            inner join users on post.user_id = users.uid
+            left outer join follows on follows.follower_id = :uid and follows.followee_id = post.user_id
+            where follow_id is null and users.uid != :uid
+            order by post.likes desc
+            limit 1
+            offset :page;
+        """, {'uid': uid, 'page': page or 0}).all()
+        ]
+
     return jsonify(posts)
 
 @post_bp.route("/posts/following", methods=['GET'])
-def following():
-    uid = request.args.get('uid')
+@jwt_required()
+def post_following():
+    uid = current_user.uid or request.args.get('uid')
     page = request.args.get('page')
     posts = [
         {
@@ -87,8 +101,43 @@ def following():
             'likes': i.likes,
             'createdat': i.createdat
         }
-        for i in Post.query.join(User, Post.user_id == User.uid).add_columns(User.uid, User.screenname, User.username, Post.pid, Post.doodle_id, Post.likes, Post.createdat).order_by(Post.likes.desc()).offset(page or 0).limit(1).all()
-    ]
+        for i in db.session.execute("""select users.uid, users.username, users.screenname, post.pid, post.doodle_id, post.likes, likes.like_id IS NOT NULL as liked, post.createdat
+            from post
+            left join likes on post.pid = likes.liked_post and likes.liking_user = :uid
+            inner join users on post.user_id = users.uid
+            inner join follows on follows.followee_id = post.user_id and follows.follower_id = :uid
+            order by post.likes desc
+            limit 1
+            offset :page;
+        """, {'uid': uid, 'page': page or 0}).all()
+        ]
+    return jsonify(posts)
+
+@post_bp.route("/posts/portfolio", methods=['GET'])
+@jwt_required()
+def post_portfolio():
+    uid = current_user.uid
+    page = request.args.get('page')
+    posts = [
+        {
+            'uid': i.uid,
+            'username': i.username,
+            'screenname': i.screenname,
+            'pid': i.pid,
+            'doodle_id': i.doodle_id,
+            'likes': i.likes,
+            'createdat': i.createdat
+        }
+        for i in db.session.execute("""select users.uid, users.username, users.screenname, post.pid, post.doodle_id, post.likes, likes.like_id IS NOT NULL as liked, post.createdat
+            from post
+            left join likes on post.pid = likes.liked_post and likes.liking_user = :uid
+            inner join users on post.user_id = users.uid
+            where post.user_id = :uid
+            order by post.likes desc
+            limit 1
+            offset :page;
+        """, {'uid': uid, 'page': page or 0}).all()
+        ]
     return jsonify(posts)
 
 
